--- a/src/Components/MealDB/recipewindow.css
+++ b/src/Components/MealDB/recipewindow.css
@@ -1,6 +1,4 @@
-/*style sheet for recipe tiles*/
-
-/*figure out and fix css for front and back of tile*/
+/*style sheet for recipe instructions*/
 
 .tile_front{
     width: 100px;
@@ -11,17 +9,18 @@
     text-align: center;
 }
 
-button{
-    width: 150px;
-    height: 300px;
+.button-style{
+    width: 80px;
+    height: 40px;
     border: 4px solid #999; 
     padding: 5px;
     font-size: 12px;
     font-style: 4097aa;
     text-align: center;
+    align-self: 'center';
 }
 
-h2{
-    color: #4097aa;
+.steps{
+    /*color: rgb(0, 0, 0);*/
     font-size: 16px;
 }
