--- a/src/tile.css
+++ b/src/tile.css
@@ -2,9 +2,9 @@
 
 /*figure out and fix css for front and back of tile*/
 
-.tile_front{
-    width: 100px;
-    height: 200px;
+.tile-front{
+    width: 150px;
+    height: 300px;
     border: 4px solid #999; 
     padding: 5px;
     font-size: 20px;
