--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,66 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.box-1 h1 {
+  font-size: 1000%;
+  line-height: 100%;
+  letter-spacing: .25em;
+  text-align: center;
+}
+
+.box-1{
+  background-color:darksalmon;
+  color: white;
+  border: 25px black double;
+  padding: 5%;
+}
+
+.box-pantry{
+  background-color: rgb(68, 157, 173);
+  padding: 10%;
+}
+
+.box-pantry h2{
+  color: darksalmon;
+  font-size: 300%;
+  letter-spacing: .25em;
+  text-align: center;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #000;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inheret;
+  float: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 3% 8.31%;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: gray;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
