--- a/src/Components/Tile/tile.css
+++ b/src/Components/Tile/tile.css
@@ -12,10 +12,10 @@
     margin-bottom: 20px;
 }
 
-button{
-    width: 150px;
+.button{
+    width: 200px;
     height: 50px;
-    border: 4px solid #999; 
+    /* border: 4px solid #999;  */
     padding: 5px;
     font-size: 12px;
     font-style: 4097aa;
@@ -26,3 +26,6 @@ h2{
     color: #4097aa;
     font-size: 16px;
 }
+
+
+
