--- a/src/Components/Tile/tile.css
+++ b/src/Components/Tile/tile.css
@@ -3,13 +3,15 @@
 /*figure out and fix css for front and back of tile*/
 
 .tile-front{
-    width: 150px;
+    width: 90%;
     height: 300px;
-    border: 4px solid #999; 
+    border: 4px solid darkgrey; 
+    /* border: 4px solid white; */
     padding: 5px;
     font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
+    border-radius: 30px;
 }
 
 .button{
@@ -23,7 +25,7 @@
 }
 
 h2{
-    color: #4097aa;
+    color: grey;
     font-size: 16px;
 }
 
