--- a/src/Components/Pantry/PantryGrid.css
+++ b/src/Components/Pantry/PantryGrid.css
@@ -1,18 +1,44 @@
 
 button {
-    flex:1;
+    flex: 1;
     border-radius: 8px;
     border-color: #fa9483;
     /* // outline: 'none', */
     outline: #fa9483;
-    margin: 20px;
-    width: 30%;
-    padding: 6px 6px;
+    margin: 10px 0px 10px 0px;
+    /* width: 30%; */
+    padding: 3px 3px;
     /* // color: '#fff', */
     color: #fa9483;
-    font-size: 10px;
+    font-size: 12px;
     letter-spacing: 1px;
     /* // background: '#fa9483', */
     background: #fff;
     cursor: pointer;
+}
+
+.IngredientTile {
+    width: 100%;
+    height: 70%;
+    border: 4px solid darkgrey; 
+    text-align: center;
+    border-radius: 30px;
+    vertical-align: center;
+    background-color: white;
+}
+
+.GridContainer {
+    margin-top: 30px;
+    margin-left: 20px; 
+}
+
+.SearchButton {
+    float: left;
+    margin-left: 10px;
+}
+
+.RemoveButton {
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 50px;
 }
