adds width/height for eggert photo and improves accessibility by changing contrast of h2's in home page

--- a/src/index.css
+++ b/src/index.css
@@ -32,14 +32,14 @@ code {
 }
 
 .box-home h2{
-  color: darksalmon;
+  color: white;
   font-size: 300%;
   letter-spacing: .25em;
   text-align: center;
 }
 
 .box-home h{
-  color: darksalmon;
+  color: white;
   font-size: 200%;
   text-align: center;
 }
