--- a/src/Components/Navbar/Button.css
+++ b/src/Components/Navbar/Button.css
@@ -1,28 +1,3 @@
-/* :root {
-    --primary: #1888ff;
-  }
-  
-  .btn {
-    padding: 8px 20px;
-    border-radius: 4px;
-    outline: none;
-    border: none;
-    font-size: 18px;
-    color: #fff;
-    cursor: pointer;
-    background-color: var(--primary);
-  }
-  
-  .btn:hover {
-    padding: 6px 18px;
-    transition: all 0.3s ease-out;
-    background-color: transparent;
-    color: #fff;
-    border-radius: 4px;
-    border: 2px solid var(--primary);
-    transition: all 0.3s ease-out;
-  } */
-
 
 
   .btn {
@@ -32,7 +7,7 @@
     cursor: pointer;
     margin: 10px;
     font-size: 1em;
-    padding: 5px 10px;
+    padding: 10px 15px;
     border: 0;
     transition: all 0.5s;
     border-radius: 7px;
@@ -42,7 +17,8 @@
 }
  
 .btn::after{
-    font-weight: 400;
+    /* display:inline-block; */
+    vertical-align:middle;
     position: absolute;
     left: 85%;
     top: 0%;
@@ -52,14 +28,21 @@
 }
  
 .btn:hover{
+  
     background: rgba(45, 67, 87, 0.9);
     transition: all 0.5s;
     border-radius: 10px;
     box-shadow: 0px 6px 15px rgba(98, 114, 129, 1);
-    padding: 1rem 1rem 1rem 1rem;
+    padding: 1rem 3rem 1rem 1rem;
 }
  
 .btn:hover::after{
+  font-family: "Font Awesome 5 Free";
+    content: "\f2f5";
+    font-weight: 900;
+    /* padding: 20px 10px 0px 0px; */
+    padding-top: 20px;
+    margin-left: -10px;
     opacity: 1;
     transition: all 0.5s;
 }
