--- a/src/Components/Tile/tile.css
+++ b/src/Components/Tile/tile.css
@@ -5,13 +5,14 @@
 .tile-front{
     width: 90%;
     height: 300px;
-    border: 4px solid darkgrey; 
-    /* border: 4px solid white; */
+    /* border: 4px solid rgba(45, 67, 87, 0.9);;  */
+    border: 6px solid white;
     padding: 5px;
     font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
     border-radius: 30px;
+    background-color:  rgba(45, 67, 100, 0.7);
 }
 
 .button{
@@ -25,8 +26,11 @@
 }
 
 h2{
-    color: grey;
+    color: white;
     font-size: 16px;
+    font-style:normal;
+    padding: 6px;
+    /* width:auto; */
 }
 
 
