fixes bug where signup disappears because of @media query which causes it to be display: none

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -148,7 +148,8 @@
       transition: 250ms;
     }
   
-    button {
+    /*TODO: fix navbar by moving this rule to hierarchically within the navbar superclass*/
+    /* button {
       display: none;
-    }
+    } */
   }
