--- a/src/Components/SignIn/LoginPage.css
+++ b/src/Components/SignIn/LoginPage.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
 }
 
-.button {
+.LoginButton {
   border: none;
   border-radius: 7px;
   outline: none;
@@ -17,12 +17,13 @@
   letter-spacing: 1px;
   background: darksalmon;
   cursor: pointer;
+  clear: left;
 }
 
 .login {
   width: 100%;
   min-height: 100vh;
-  padding: 0 20px;
+  padding: 0 5%;
   background: #e9e9e9;
   display: flex;
   justify-content: flex-end;
@@ -32,8 +33,8 @@
   padding: 60px;
   margin: auto;
   width: 100%;
-  max-width: 520px;
-  min-height: 600px;
+  max-width: 40%;
+  min-height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -72,7 +73,7 @@
 
 .login .loginContainer .btnContainer {
   width: 100%;
-  padding: 24px 0;
+  padding: 24px;
 }
 
 .login .loginContainer .btnContainer p {
@@ -103,7 +104,6 @@
   color: #fff;
   margin-bottom: 5%;
   float: right;
-
 }
 
 .Insta-Chef-Logo {
