--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@ code {
   background-color: rgb(68, 157, 173);
   padding: 10%;
   height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 0;
 }
 
